Use SVG Heroku button

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="row site-buttons">
                 <div class="col-xs-6 text-right">
                   <a target="_blank" href="https://heroku.com/deploy?template=https://github.com/colonizers/colonizers">
-                    <img src="https://www.herokucdn.com/deploy/button.png"
+                    <img src="https://www.herokucdn.com/deploy/button.svg"
                          alt="Deploy to Heroku" height="30" />
                   </a>
                 </div>
