Fixed button links

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
               </div>
 
               <p>
-                <button type="button" class="btn btn-heroku">
+                <a class="btn btn-heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/colonizers/colonizers">
                   Deploy to Heroku
-                </button>
-                <button type="button" class="btn btn-github">
+                </a>
+                <a class="btn btn-github" href="https://github.com/colonizers/colonizers">
                   View on GitHub
-                </button>
+                </a>
               </p>
 
               <p>
