Added a demo page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       .site-info .alert {
         display: inline-block;
       }
+      .btn-demo {
+        background-color: #fff;
+        border: 2px solid #286090;
+        color: #286090;
+      }
+      .btn-demo:hover {
+        background-color: #286090;
+        color: #f5f5f5;
+      }
       .btn-heroku {
         background-color: #fff;
         border: 2px solid #58488a;
@@ -119,6 +128,9 @@
               </div>
 
               <p>
+                <a class="btn btn-demo"  href="./demo.html">
+                  Demo
+                </a>
                 <a class="btn btn-heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/colonizers/colonizers">
                   Deploy to Heroku
                 </a>
