Switched from express to hapi

--- a/packages/colonizers/server/web/account/index.html
+++ b/packages/colonizers/server/web/account/index.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="well">
-        <form role="form" method="post" action="/account">
+        <form role="form" method="put" action="/api/account">
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="john.smith" value="{{ user.username }}">
