--- a/packages/colonizers/server/web/lobby/index.html
+++ b/packages/colonizers/server/web/lobby/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="tab-pane" id="new">
-          <form role="form" method="post" action="/new">
+          <form role="form" method="post" action="/api/rooms">
             <div class="form-group">
               <label for="scenario">Scenario</label>
               <select name="scenario" class="form-control">
