--- a/server/web/login/index.html
+++ b/server/web/login/index.html
@@ -8,7 +8,7 @@
     <div class="col-sm-6">
       <div class="well">
         <h3>Login</h3>
-        <form role="form" method="post" action="/login">
+        <form role="form" method="post" action="/login" class="login">
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="john.smith">
@@ -24,7 +24,7 @@
     <div class="col-sm-6">
       <div class="well">
         <h3>Or Register</h3>
-        <form role="form" method="post" action="/register">
+        <form role="form" method="post" action="/signup" class="signup">
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="john.smith">
