--- a/server/web/layout.html
+++ b/server/web/layout.html
@@ -7,7 +7,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Colonizers">
   <link rel="stylesheet" type="text/css" href="/css/site.css" />
-  {{#context}}<script>window.context = {{{ context }}}</script>{{/context}}
+  {{#if context}}<script>window.context = {{json context}}</script>{{/if}}
   <script src="/site.js" charset="utf-8"></script>
   {{#script}}
   <script src="/script/{{{script}}}.js" charset="utf-8"></script>
