Switched to handlebars for templating

--- a/packages/colonizers/server/web/lobby/index.html
+++ b/packages/colonizers/server/web/lobby/index.html
@@ -28,7 +28,7 @@
               </td>
               <td>
                 Created
-                <span class="date" title="{{created.toISOString}}"></span>
+                <span class="date" title="{{isoFormat created}}"></span>
               </td>
               <td>
                 <a href="{{url}}">Join</a>
