--- a/server/web/room/room.html
+++ b/server/web/room/room.html
@@ -15,6 +15,17 @@
           </div>
         </li>
       </ul>
+
+      <button type="button" class="btn btn-success btn-block"
+              data-bind="visible: showJoinBtn, click: clickJoinBtn">
+        Join Game
+      </button>
+
+      <button type="button" class="btn btn-danger btn-block"
+              data-bind="visible: showLeaveBtn, click: clickLeaveBtn">
+        Leave Game
+      </button>
+
     </div>
   </div>
 </div>
