--- a/server/web/room/game.html
+++ b/server/web/room/game.html
@@ -40,6 +40,7 @@
             <div data-bind="component: 'players'"></div>
           </div>
           <div class="tab-pane" id="chat">
+            <div data-bind="component: 'chat'"></div>
           </div>
           <div class="tab-pane" id="log">
           </div>
