Fixed desktop app

--- a/packages/colonizers-desktop/lib/game.html
+++ b/packages/colonizers-desktop/lib/game.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-title" content="Colonizers">
   <meta name="msapplication-tap-highlight" content="no" />
   <title>Colonizers</title>
-  <link rel="stylesheet" type="text/css" href="../node_modules/colonizers-client/public/css/game.css">
+  <link rel="stylesheet" type="text/css" href="../../colonizers-client/public/css/game.css">
 </head>
 <body>
 
