Switch to github.com/sibartlett/colonizers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title" content="Colonizers" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://colonizers.github.io" />
+    <meta property="og:url" content="https://sibartlett.github.io/colonizers" />
     <meta property="og:image" content="http://i.imgur.com/j91XT2y.png" />
 
     <title>Colonizers</title>
@@ -131,17 +131,17 @@
                 <a class="btn btn-demo"  href="./demo.html">
                   Demo
                 </a>
-                <a class="btn btn-heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/colonizers/colonizers">
+                <!-- <a class="btn btn-heroku" target="_blank" href="https://heroku.com/deploy?template=https://github.com/sibartlett/colonizers">
                   Deploy to Heroku
-                </a>
-                <a class="btn btn-github" href="https://github.com/colonizers/colonizers">
+                </a> -->
+                <a class="btn btn-github" href="https://github.com/sibartlett/colonizers">
                   View on GitHub
                 </a>
               </p>
 
               <p>
                 Code licensed under
-                  <a target="_blank" href="https://github.com/colonizers/colonizers/blob/master/LICENSE">GNU AGPL v3.0
+                  <a target="_blank" href="https://github.com/sibartlett/colonizers/blob/master/LICENSE">GNU AGPL v3.0
                   </a>
                 </p>
 
