Replaced browserify with webpack

--- a/packages/colonizers/server/web/room/game.html
+++ b/packages/colonizers/server/web/room/game.html
@@ -56,6 +56,6 @@
   <div data-bind="component: 'trade-modal'"></div>
 
   {{#if context}}<script>window.context = {{json context}}</script>{{/if}}
-  <script src="/room.js" charset="utf-8"></script>
+  <script src="/bundles/game.bundle.js" charset="utf-8"></script>
 </body>
 </html>
