--- a/packages/colonizers/server/web/layout.html
+++ b/packages/colonizers/server/web/layout.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-title" content="Colonizers">
   <link rel="stylesheet" type="text/css" href="/css/site.css" />
   {{#if context}}<script>window.context = {{json context}}</script>{{/if}}
-  <script src="/site.js" charset="utf-8"></script>
+  <script src="/bundles/site.bundle.js" charset="utf-8"></script>
   {{#if script}}
   <script src="/script/{{script}}.js" charset="utf-8"></script>
   {{/if}}
